# FinanceSentimentCorpus

./: .gitignore  README.md  alembic.ini  contents.csv  crawl_bs.py  crawling.py  main.py  main2.py  pyproject.toml  scrapy.cfg  spider.py  spider2.py  stock_code.csv  test_code.csv
alembic/: env.py
alembic/versions/: 065c693f7a96_initial_migration.py  0bd6fbec0ed9_add_columns_articlecontentorm__at.py  3a152b61bffb_add_new_column_ticker.py  5941b683ecd6_add_columns_articlecontentorm.py  70d0aacbc475_change_nullability_of_articlecontentorm_.py  7146fdf88168_change_column_names_and_add_new_column_.py  d7d3ec2878fc_change_column_name_of_article_table.py  d97e0641bd1e_move_data_to_new_table.py  f30e11e332a4_change_column_names_is_related_to_is_.py
assets/: README_KO.md
datasets/: kosdaq.csv  naver_news.db
docs/: TEMP_DOCS.md  test.py
examples/: Transformers_with_ko_news.ipynb  crawl_xpath.py  sentiment_analysis_results.csv  sentiment_corpus.ipynb
language_crawler/: __init__.py  items.py  pipelines.py  settings.py
language_crawler/database/: models.py  session.py
language_crawler/language_crawler/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
language_crawler/language_crawler/spiders/: book.py  finance_news_list.py  news_naver_playwright.py
language_crawler/spiders/: finance_news_list.py  naver_news_content.py  naver_news_list_last_year.py  news_contents.py
scripts/: crawl_css.py
tests/: test_session.py
