[tool.poetry]
name = "financesentimentcorpus"
version = "0.1.0"
description = ""
authors = ["BrianBae <bohblue23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pandas = {extras = ["aws", "compression", "computation", "fss", "html", "output-formatting", "performance", "plot"], version = "^2.2.2"}
scrapy = "^2.11.1"
scrapy-playwright = "^0.0.34"
alembic = "^1.13.1"
newspaper3k = "^0.2.8"
scrapy-fake-useragent = "^1.4.4"
lxml = {extras = ["html-clean"], version = "^5.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
